--- a/headsets/index.html
+++ b/headsets/index.html
@@ -67,7 +67,7 @@
                             <li>Detachable microphone</li>
                             <li>Works on PC, PS5, Xbox</li>
                         </ul>
-                        <a href="https://www.amazon.co.uk/dp/B00SAYCXWG?tag=YOURID" target="_blank" rel="noopener" class="product-btn">View on Amazon →</a>
+                        <a href="https://www.amazon.co.uk/dp/B00SAYCXWG?tag=stackpick" target="_blank" rel="noopener" class="product-btn">View on Amazon →</a>
                     </div>
                 </div>
 
@@ -84,7 +84,7 @@
                             <li>ClearCast microphone</li>
                             <li>Ski goggle suspension headband</li>
                         </ul>
-                        <a href="https://www.amazon.co.uk/dp/B07FZVXS8H?tag=YOURID" target="_blank" rel="noopener" class="product-btn">View on Amazon →</a>
+                        <a href="https://www.amazon.co.uk/dp/B07FZVXS8H?tag=stackpick" target="_blank" rel="noopener" class="product-btn">View on Amazon →</a>
                     </div>
                 </div>
 
@@ -101,7 +101,7 @@
                             <li>Lightweight 262g design</li>
                             <li>Removable HyperClear mic</li>
                         </ul>
-                        <a href="https://www.amazon.co.uk/dp/B086PDZVYK?tag=YOURID" target="_blank" rel="noopener" class="product-btn">View on Amazon →</a>
+                        <a href="https://www.amazon.co.uk/dp/B086PDZVYK?tag=stackpick" target="_blank" rel="noopener" class="product-btn">View on Amazon →</a>
                     </div>
                 </div>
 
@@ -118,7 +118,7 @@
                             <li>278g ultra-lightweight</li>
                             <li>Blue VO!CE mic filters</li>
                         </ul>
-                        <a href="https://www.amazon.co.uk/dp/B08FF7HJXY?tag=YOURID" target="_blank" rel="noopener" class="product-btn">View on Amazon →</a>
+                        <a href="https://www.amazon.co.uk/dp/B08FF7HJXY?tag=stackpick" target="_blank" rel="noopener" class="product-btn">View on Amazon →</a>
                     </div>
                 </div>
 
@@ -135,7 +135,7 @@
                             <li>Discord certified mic</li>
                             <li>Multi-platform compatible</li>
                         </ul>
-                        <a href="https://www.amazon.co.uk/dp/B07XC34JMG?tag=YOURID" target="_blank" rel="noopener" class="product-btn">View on Amazon →</a>
+                        <a href="https://www.amazon.co.uk/dp/B07XC34JMG?tag=stackpick" target="_blank" rel="noopener" class="product-btn">View on Amazon →</a>
                     </div>
                 </div>
             </div>
