--- a/about/index.html
+++ b/about/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About Stack Pick - UK gaming gear recommendations and affiliate disclosure.">
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://stackpick.co.uk/about/">
+    <meta property="og:title" content="About Stack Pick | Gaming Gear Reviews UK">
+    <meta property="og:description" content="Learn about Stack Pick's testing process and affiliate disclosure. Honest gaming gear recommendations for UK gamers.">
+    <meta property="og:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
+    
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://stackpick.co.uk/about/">
+    <meta property="twitter:title" content="About Stack Pick | Gaming Gear Reviews UK">
+    <meta property="twitter:description" content="Learn about Stack Pick's testing process and affiliate disclosure. Honest gaming gear recommendations for UK gamers.">
+    <meta property="twitter:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
     <title>About Stack Pick | Gaming Gear Reviews UK</title>
     
     <!-- Favicon -->
