--- a/chairs/index.html
+++ b/chairs/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Best gaming chairs for UK gamers. Comfortable seating for long gaming sessions from budget to premium.">
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://stackpick.co.uk/chairs/">
+    <meta property="og:title" content="Best Gaming Chairs UK 2026 | Stack Pick">
+    <meta property="og:description" content="Gaming chairs and ergonomic office chairs tested for UK gamers. Fabric, premium, and budget options reviewed.">
+    <meta property="og:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
+    
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://stackpick.co.uk/chairs/">
+    <meta property="twitter:title" content="Best Gaming Chairs UK 2026 | Stack Pick">
+    <meta property="twitter:description" content="Gaming chairs and ergonomic office chairs tested for UK gamers. Fabric, premium, and budget options reviewed.">
+    <meta property="twitter:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
     <title>Best Gaming Chairs UK 2026 | Stack Pick</title>
     
     <!-- Favicon -->
