--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta name="google-site-verification" content="FeboAnqcLjlONS3xZMwC55zCneE0qAR33PYKEPIZeJg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Stack Pick - Curated gaming gear recommendations for UK gamers. Find the best headsets, keyboards, mice, monitors, and chairs.">
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://stackpick.co.uk/">
+    <meta property="og:title" content="Stack Pick - Build Your Perfect Gaming Setup | UK">
+    <meta property="og:description" content="Curated gaming gear recommendations for UK gamers. Find the best headsets, keyboards, mice, monitors, and chairs.">
+    <meta property="og:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
+    
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://stackpick.co.uk/">
+    <meta property="twitter:title" content="Stack Pick - Build Your Perfect Gaming Setup | UK">
+    <meta property="twitter:description" content="Curated gaming gear recommendations for UK gamers. Find the best headsets, keyboards, mice, monitors, and chairs.">
+    <meta property="twitter:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
     <title>Stack Pick - Build Your Perfect Gaming Setup | UK</title>
     
     <!-- Favicon -->
