--- a/keyboards/index.html
+++ b/keyboards/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Best gaming keyboards for UK gamers. Mechanical and membrane options from budget to premium.">
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://stackpick.co.uk/keyboards/">
+    <meta property="og:title" content="Best Gaming Keyboards UK 2026 | Stack Pick">
+    <meta property="og:description" content="Mechanical gaming keyboards tested for UK gamers. Budget to premium options with honest reviews and UK pricing.">
+    <meta property="og:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
+    
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://stackpick.co.uk/keyboards/">
+    <meta property="twitter:title" content="Best Gaming Keyboards UK 2026 | Stack Pick">
+    <meta property="twitter:description" content="Mechanical gaming keyboards tested for UK gamers. Budget to premium options with honest reviews and UK pricing.">
+    <meta property="twitter:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
     <title>Best Gaming Keyboards UK 2026 | Stack Pick</title>
     
     <!-- Favicon -->
