--- a/mice/index.html
+++ b/mice/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Best gaming mice for UK gamers. Wired and wireless options for FPS, MMO, and MOBA games.">
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://stackpick.co.uk/mice/">
+    <meta property="og:title" content="Best Gaming Mice UK 2026 | Stack Pick">
+    <meta property="og:description" content="Gaming mice tested for FPS, MMO, and MOBA. Lightweight, wireless, and budget options for UK gamers.">
+    <meta property="og:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
+    
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://stackpick.co.uk/mice/">
+    <meta property="twitter:title" content="Best Gaming Mice UK 2026 | Stack Pick">
+    <meta property="twitter:description" content="Gaming mice tested for FPS, MMO, and MOBA. Lightweight, wireless, and budget options for UK gamers.">
+    <meta property="twitter:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
     <title>Best Gaming Mice UK 2026 | Stack Pick</title>
     
     <!-- Favicon -->
