--- a/monitors/index.html
+++ b/monitors/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Best gaming monitors for UK gamers. OLED, 4K, ultrawide, esports, and budget options.">
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://stackpick.co.uk/monitors/">
+    <meta property="og:title" content="Best Gaming Monitors UK 2026 | Stack Pick">
+    <meta property="og:description" content="OLED, 4K, ultrawide, and high refresh rate gaming monitors tested for UK gamers. From budget to premium picks.">
+    <meta property="og:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
+    
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://stackpick.co.uk/monitors/">
+    <meta property="twitter:title" content="Best Gaming Monitors UK 2026 | Stack Pick">
+    <meta property="twitter:description" content="OLED, 4K, ultrawide, and high refresh rate gaming monitors tested for UK gamers. From budget to premium picks.">
+    <meta property="twitter:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
     <title>Best Gaming Monitors UK 2026 | Stack Pick</title>
     
     <!-- Favicon -->
