--- a/guides/gaming-setup-500/index.html
+++ b/guides/gaming-setup-500/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Complete £500 gaming setup for UK gamers. Budget headset, keyboard, mouse, monitor, and chair.">
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://stackpick.co.uk/guides/gaming-setup-500/">
+    <meta property="og:title" content="£500 Gaming Setup UK 2026 | Stack Pick">
+    <meta property="og:description" content="Complete £498 gaming setup for UK gamers. Budget headset, keyboard, mouse, monitor, and chair with UK pricing.">
+    <meta property="og:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
+    
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://stackpick.co.uk/guides/gaming-setup-500/">
+    <meta property="twitter:title" content="£500 Gaming Setup UK 2026 | Stack Pick">
+    <meta property="twitter:description" content="Complete £498 gaming setup for UK gamers. Budget headset, keyboard, mouse, monitor, and chair with UK pricing.">
+    <meta property="twitter:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
     <title>£500 Gaming Setup UK 2026 | Stack Pick</title>
     
     <!-- Favicon -->
