--- a/guides/index.html
+++ b/guides/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Complete gaming setup guides for UK gamers. Build your perfect setup by budget.">
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://stackpick.co.uk/guides/">
+    <meta property="og:title" content="Gaming Setup Guides UK | Stack Pick">
+    <meta property="og:description" content="Complete gaming setup guides by budget. Build your perfect setup with UK pricing and availability.">
+    <meta property="og:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
+    
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://stackpick.co.uk/guides/">
+    <meta property="twitter:title" content="Gaming Setup Guides UK | Stack Pick">
+    <meta property="twitter:description" content="Complete gaming setup guides by budget. Build your perfect setup with UK pricing and availability.">
+    <meta property="twitter:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
     <title>Gaming Setup Guides UK | Stack Pick</title>
     
     <!-- Favicon -->
