--- a/chairs/index.html
+++ b/chairs/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTN7H3L6DV"></script>
     <script src="/assets/js/analytics.js"></script>
     
 </head>
