--- a/mice/index.html
+++ b/mice/index.html
@@ -16,16 +16,23 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTN7H3L6DV"></script>
     <script src="/assets/js/analytics.js"></script>
+    <script type="application/ld+json">
+    {"@context":"https://schema.org","@type":"ItemList","name":"Best Gaming Mice UK 2026","url":"https://stackpick.co.uk/mice/","numberOfItems":4,"itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Product","name":"Razer Viper V3 Pro","brand":{"@type":"Brand","name":"Razer"},"offers":{"@type":"Offer","priceCurrency":"GBP","price":"116.99","availability":"https://schema.org/InStock"}}}]}
+    </script>
+    <script type="application/ld+json">
+    {"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://stackpick.co.uk/"},{"@type":"ListItem","position":2,"name":"Gaming Mice","item":"https://stackpick.co.uk/mice/"}]}
+    </script>
 </head>
 <body>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
     <header>
         <div class="header-container">
             <a href="/" class="logo">Stack<span>Pick</span></a>
-            <button class="menu-toggle" id="menu-toggle">☰</button>
+            <button class="menu-toggle" id="menu-toggle" aria-label="Open menu" aria-expanded="false">☰</button>
             <nav>
                 <a href="/headsets/">Headsets</a>
                 <a href="/keyboards/">Keyboards</a>
-                <a href="/mice/">Mice</a>
+                <a href="/mice/" aria-current="page">Mice</a>
                 <a href="/monitors/">Monitors</a>
                 <a href="/chairs/">Chairs</a>
                 <a href="/about/">About</a>
@@ -41,7 +48,7 @@
         </div>
     </section>
 
-    <main class="container">
+    <main class="container" id="main-content">
         <section class="section">
             <div class="section-title">
                 <h2>Our Top Picks</h2>
