--- a/chairs/index.html
+++ b/chairs/index.html
@@ -3,44 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Best gaming chairs for UK gamers 2026. Researched ergonomic and budget options from secretlab to budget picks. UK pricing verified on Amazon.">
+    <meta name="description" content="Best gaming chairs for UK gamers 2026. Researched ergonomic and budget options. UK pricing verified on Amazon.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://stackpick.co.uk/chairs/">
     <meta property="og:title" content="Best Gaming Chairs UK 2026 | Stack Pick">
     <meta property="og:description" content="Researched gaming chairs for UK gamers. Budget to premium ergonomic options with honest recommendations and UK pricing.">
     <meta property="og:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://stackpick.co.uk/chairs/">
-    <meta property="twitter:title" content="Best Gaming Chairs UK 2026 | Stack Pick">
-    <meta property="twitter:description" content="Researched gaming chairs for UK gamers. Budget to premium ergonomic options with honest recommendations and UK pricing.">
-    <meta property="twitter:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
     <title>Best Gaming Chairs UK 2026 | Stack Pick</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎮</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🪑</text></svg>">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTN7H3L6DV"></script>
     <script src="/assets/js/analytics.js"></script>
+    <!-- SCHEMA: UPDATE itemListElement once new chairs are confirmed -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "ItemList",
-      "name": "Best Gaming Chairs UK 2026",
-      "description": "Researched gaming chair recommendations for UK gamers with verified UK pricing.",
-      "url": "https://stackpick.co.uk/chairs/",
-      "numberOfItems": 5,
-      "itemListElement": [
-        {"@type":"ListItem","position":1,"item":{"@type":"Product","name":"Secretlab TITAN Evo 2022","description":"Premium gaming chair with adjustable lumbar support","brand":{"@type":"Brand","name":"Secretlab"},"offers":{"@type":"Offer","priceCurrency":"GBP","price":"379.00","availability":"https://schema.org/InStock"}}},
-        {"@type":"ListItem","position":2,"item":{"@type":"Product","name":"noblechairs HERO","description":"High-end gaming chair with ergonomic lumbar support","brand":{"@type":"Brand","name":"noblechairs"},"offers":{"@type":"Offer","priceCurrency":"GBP","price":"299.99","availability":"https://schema.org/InStock"}}},
-        {"@type":"ListItem","position":3,"item":{"@type":"Product","name":"GTPLAYER Gaming Chair","description":"Budget gaming chair with footrest","brand":{"@type":"Brand","name":"GTPLAYER"},"offers":{"@type":"Offer","priceCurrency":"GBP","price":"119.99","availability":"https://schema.org/InStock"}}},
-        {"@type":"ListItem","position":4,"item":{"@type":"Product","name":"Herman Miller Aeron","description":"Premium ergonomic office chair favoured by pro gamers","brand":{"@type":"Brand","name":"Herman Miller"},"offers":{"@type":"Offer","priceCurrency":"GBP","price":"1099.00","availability":"https://schema.org/InStock"}}},
-        {"@type":"ListItem","position":5,"item":{"@type":"Product","name":"Corsair TC100 Relaxed","description":"Entry-level gaming chair with leatherette finish","brand":{"@type":"Brand","name":"Corsair"},"offers":{"@type":"Offer","priceCurrency":"GBP","price":"159.99","availability":"https://schema.org/InStock"}}}
-      ]
-    }
-    </script>
-    <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://stackpick.co.uk/"},{"@type":"ListItem","position":2,"name":"Gaming Chairs","item":"https://stackpick.co.uk/chairs/"}]}
+    {"@context":"https://schema.org","@type":"ItemList","name":"Best Gaming Chairs UK 2026","url":"https://stackpick.co.uk/chairs/","itemListElement":[]}
     </script>
 </head>
 <body>
@@ -80,101 +59,45 @@
 
     <main class="container" id="main-content">
         <section class="section">
-            <div class="section-title">
-                <h2>Our Top Picks</h2>
-                <p>Researched gaming chairs available in the UK</p>
-            </div>
+            <!-- ============================================================
+                 CHAIRS: AWAITING NEW PRODUCT LIST
+                 Replace each product-card below with your new chair picks.
+                 Template for each card:
+
+                 <div class="product-card">
+                     <div class="product-image-placeholder" aria-hidden="true">🪑</div>
+                     <div class="product-content">
+                         <span class="product-badge">BADGE LABEL</span>
+                         <h3 class="product-title">Chair Name</h3>
+                         <div class="product-price-block">
+                             <span class="price-current-label">Amazon price</span>
+                             <span class="price-current">£XXX.XX</span>
+                             [optional: RRP block if discounted]
+                             <span class="price-rrp-wrap">
+                                 <span class="price-rrp-label">RRP</span>
+                                 <span class="price-rrp">£XXX.XX</span>
+                             </span>
+                             <span class="price-saving">Save £XX</span>
+                         </div>
+                         <p class="product-desc">Short 1-2 sentence pitch.</p>
+                         <ul class="product-features">
+                             <li class="pro"><span class="pro-icon">✓</span> Pro point</li>
+                             <li class="pro"><span class="pro-icon">✓</span> Pro point</li>
+                             <li class="con"><span class="con-icon">✕</span> Con point</li>
+                         </ul>
+                         <a href="AMAZON_LINK" target="_blank" rel="noopener sponsored" class="product-btn">View on Amazon →</a>
+                     </div>
+                 </div>
+                 ============================================================ -->
+
             <div class="product-grid">
-
-                <div class="product-card">
-                    <div class="product-image-placeholder" aria-hidden="true">🪑</div>
-                    <div class="product-content">
-                        <span class="product-badge">BEST OVERALL</span>
-                        <h3 class="product-title">Secretlab TITAN Evo 2022</h3>
-                        <div class="product-price">£379.00</div>
-                        <ul class="product-features">
-                            <li>Magnetic memory foam head pillow</li>
-                            <li>4-way L-ADAPT lumbar system</li>
-                            <li>Pebble seat base reduces leg pressure</li>
-                            <li>Cold-cure foam, 5-year warranty</li>
-                        </ul>
-                        <a href="https://amzn.to/3SecLab" target="_blank" rel="noopener sponsored" class="product-btn">View on Amazon →</a>
-                    </div>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image-placeholder" aria-hidden="true">🪑</div>
-                    <div class="product-content">
-                        <span class="product-badge">BEST MID-RANGE</span>
-                        <h3 class="product-title">noblechairs HERO</h3>
-                        <div class="product-price">£299.99 <span class="price-was">£349.99</span></div>
-                        <ul class="product-features">
-                            <li>Integrated lumbar support system</li>
-                            <li>4D armrests, 135° recline</li>
-                            <li>German-engineered seat foam</li>
-                            <li>Max 150kg weight capacity</li>
-                        </ul>
-                        <a href="https://amzn.to/3NobHero" target="_blank" rel="noopener sponsored" class="product-btn">View on Amazon →</a>
-                    </div>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image-placeholder" aria-hidden="true">🪑</div>
-                    <div class="product-content">
-                        <span class="product-badge">BEST BUDGET</span>
-                        <h3 class="product-title">GTPLAYER Gaming Chair</h3>
-                        <div class="product-price">£119.99 <span class="price-was">£159.99</span></div>
-                        <ul class="product-features">
-                            <li>Extendable footrest included</li>
-                            <li>Adjustable lumbar & headrest cushions</li>
-                            <li>360° swivel, 150° recline</li>
-                            <li>Best value under £150</li>
-                        </ul>
-                        <a href="https://amzn.to/3GTPLAY" target="_blank" rel="noopener sponsored" class="product-btn">View on Amazon →</a>
-                    </div>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image-placeholder" aria-hidden="true">🪑</div>
-                    <div class="product-content">
-                        <span class="product-badge">PREMIUM / PRO PICK</span>
-                        <h3 class="product-title">Herman Miller Aeron</h3>
-                        <div class="product-price">£1,099.00</div>
-                        <ul class="product-features">
-                            <li>PostureFit SL spinal support</li>
-                            <li>8Z Pellicle mesh — breathes all day</li>
-                            <li>Preferred by pro esports players &amp; streamers</li>
-                            <li>12-year warranty, made to last decades</li>
-                        </ul>
-                        <a href="https://amzn.to/3HMAeron" target="_blank" rel="noopener sponsored" class="product-btn">View on Amazon →</a>
-                    </div>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image-placeholder" aria-hidden="true">🪑</div>
-                    <div class="product-content">
-                        <span class="product-badge">ENTRY LEVEL</span>
-                        <h3 class="product-title">Corsair TC100 Relaxed</h3>
-                        <div class="product-price">£159.99 <span class="price-was">£199.99</span></div>
-                        <ul class="product-features">
-                            <li>Leatherette &amp; mesh hybrid back</li>
-                            <li>Adjustable headrest &amp; lumbar pillow</li>
-                            <li>Wide seat design for relaxed posture</li>
-                            <li>Solid entry point from trusted brand</li>
-                        </ul>
-                        <a href="https://amzn.to/3CorsTC" target="_blank" rel="noopener sponsored" class="product-btn">View on Amazon →</a>
-                    </div>
-                </div>
-
+                <!-- NEW CHAIRS GO HERE — send your picks and we'll fill this in -->
             </div>
         </section>
 
         <section class="section">
-            <div class="section-title">
-                <h2>Buying Guide</h2>
-            </div>
             <div class="buying-guide">
-                <h3>Gaming Chair vs Ergonomic Office Chair</h3>
+                <h2>Buying Guide: Gaming Chair vs Ergonomic Office Chair</h2>
                 <p>This is the most common debate in gaming chair communities, and the answer depends on budget and how long you sit. Budget gaming chairs (under £200) typically beat budget office chairs for comfort and build quality. But once you're spending £300+, ergonomic office chairs like Herman Miller or Steelcase offer measurably better lumbar support for long sessions. Pro gamers increasingly use office chairs — it's not just a flex.</p>
 
                 <h3>What to Look For</h3>
@@ -184,12 +107,12 @@
                 <p>PU leatherette looks great but gets hot in summer and cracks over time (usually 2-3 years with heavy use). Real leather is better but expensive. Mesh backs breathe significantly better — the Herman Miller Aeron's mesh is why it dominates pro setups despite the cost. Fabric feels more like a normal chair and ages gracefully.</p>
 
                 <h3>Budget Brackets</h3>
-                <p>Under £150: GTPLAYER and similar offer the basics — recline, armrests, a cushion. Fine for occasional gaming. £150-300: Corsair, GT Racing, DXRacer — proper gaming chairs with better foam and build. £300-500: Secretlab TITAN Evo and noblechairs HERO — where quality really steps up. £500+: Herman Miller, Steelcase Leap — pro-grade ergonomics, built to last a decade.</p>
+                <p>Under £150: basic gaming chairs with recline and armrests — fine for occasional use. £150–300: proper builds with better foam and frame. £300–500: where quality really steps up — brands like Secretlab. £500+: pro-grade ergonomics built to last a decade.</p>
 
                 <h3>How We Pick</h3>
                 <p>We cross-reference r/battlestations, r/buildapc, and gaming Discord communities to find what UK gamers are sitting in and still recommending after 12+ months. Everything listed is stocked on Amazon UK with verified pricing — no US-only stock, no grey imports.</p>
 
-                <p class="last-updated"><em>Last updated: February 17, 2026. Prices checked weekly.</em></p>
+                <p class="last-updated"><em>Last updated: February 2026. Prices checked weekly.</em></p>
             </div>
         </section>
     </main>
@@ -226,7 +149,6 @@
             </div>
         </div>
     </footer>
-
     <script src="/assets/js/theme-toggle.js"></script>
     <script src="/assets/js/main.js"></script>
 </body>
