--- a/monitors/index.html
+++ b/monitors/index.html
@@ -75,7 +75,7 @@
                             <li class="pro"><span class="pro-icon">✓</span> Third-gen OLED — reduced burn-in risk</li>
                             <li class="con"><span class="con-icon">✕</span> Glossy panel needs a darker room</li>
                         </ul>
-                        <a href="https://amzn.to/4aXar1W" target="_blank" rel="noopener sponsored" class="product-btn">View on Amazon →</a>
+                        <a href="https://amzn.to/4aX25Y9" target="_blank" rel="noopener sponsored" class="product-btn">View on Amazon →</a>
                     </div>
                 </div>
 
@@ -94,7 +94,7 @@
                             <li class="pro"><span class="pro-icon">✓</span> HDR10 support + built-in speakers</li>
                             <li class="con"><span class="con-icon">✕</span> 1080p won't pair well with a top GPU</li>
                         </ul>
-                        <a href="https://amzn.to/40mGa6x" target="_blank" rel="noopener sponsored" class="product-btn">View on Amazon →</a>
+                        <a href="https://amzn.to/4kFxb9U" target="_blank" rel="noopener sponsored" class="product-btn">View on Amazon →</a>
                     </div>
                 </div>
 
@@ -113,7 +113,7 @@
                             <li class="pro"><span class="pro-icon">✓</span> Matte finish — zero-glare gaming</li>
                             <li class="con"><span class="con-icon">✕</span> Needs a powerful GPU to run 4K at 240Hz</li>
                         </ul>
-                        <a href="https://amzn.to/46eomhy" target="_blank" rel="noopener sponsored" class="product-btn">View on Amazon →</a>
+                        <a href=https://amzn.to/4cy1qh1" target="_blank" rel="noopener sponsored" class="product-btn">View on Amazon →</a>
                     </div>
                 </div>
 
@@ -132,7 +132,7 @@
                             <li class="pro"><span class="pro-icon">✓</span> Great for bright rooms — no burn-in risk</li>
                             <li class="con"><span class="con-icon">✕</span> Halos visible near bright objects in dark scenes</li>
                         </ul>
-                        <a href="https://amzn.to/4aVld90" target="_blank" rel="noopener sponsored" class="product-btn">View on Amazon →</a>
+                        <a href="https://amzn.to/4kFwZHI" target="_blank" rel="noopener sponsored" class="product-btn">View on Amazon →</a>
                     </div>
                 </div>
 
@@ -156,7 +156,7 @@
                             <li class="pro"><span class="pro-icon">✓</span> DisplayHDR 1000 + USB-C PD</li>
                             <li class="con"><span class="con-icon">✕</span> Pricier than the AOC Mini-LED</li>
                         </ul>
-                        <a href="https://amzn.to/274URDF" target="_blank" rel="noopener sponsored" class="product-btn">View on Amazon →</a>
+                        <a href="https://amzn.to/46iIlvA" target="_blank" rel="noopener sponsored" class="product-btn">View on Amazon →</a>
                     </div>
                 </div>
 
